# skyscrapersim

./: CMakeLists.txt  README.md  plugins.cfg  skyscraper.ini
src/frontend/: mainscreen.cpp  skyscraper.cpp
src/sbs/: camera.cpp  sbs.cpp
